[package]
name = "o11y"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "logs", "metrics", "trace", "reqwest-client"] }
opentelemetry-appender-tracing = "0.27"
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[target.'cfg(unix)'.dependencies]
pyroscope = "0.5"
pyroscope_pprofrs = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "o11y"
path = "src/lib.rs"
