[package]
name = "o11y"
version = "0.0.0"
edition = "2024"
description = "Observability library for Rust: logging, metrics, tracing, and profiling."
license = "GPL-3.0-only"

[features]
default = ["logger", "tracer", "meter", "profiler"]
logger = ["opentelemetry-otlp/logs"]
tracer = ["opentelemetry-otlp/trace"]
meter = ["opentelemetry-otlp/metrics"]
profiler = ["dep:pyroscope", "dep:pyroscope_pprofrs"]

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "logs", "trace"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
opentelemetry-semantic-conventions = { version = "0.27", features = ["semconv_experimental"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "registry"] }
tracing-opentelemetry = "0.28"
opentelemetry-appender-tracing = "0.27"

[target.'cfg(unix)'.dependencies]
pyroscope = { version = "0.5", optional = true }
pyroscope_pprofrs = { version = "0.2", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
opentelemetry-appender-tracing = "0.27"

[lib]
name = "o11y"
path = "src/lib.rs"
